--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "description": "A comprehensive dashboard for managing the recruitment process.",
   "scripts": {
-    "build": "node build.js"
+    "build": "node build.js",
+    "start": "serve dist"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
@@ -17,6 +18,7 @@
     "@types/react-dom": "^18.3.0",
     "esbuild": "^0.23.0",
     "fs-extra": "^11.2.0",
-    "typescript": "^5.5.3"
+    "typescript": "^5.5.3",
+    "serve": "^14.2.3"
   }
 }
